--- a/template.tex
+++ b/template.tex
@@ -8,6 +8,7 @@
 % physique
 \definecolor{oranges}{RGB}{255, 242, 230}
 \definecolor{rouges}{RGB}{255, 230, 230}
+\definecolor{rose}{RGB}{255, 204, 204}
 
 % maths
 \definecolor{saumon}{RGB}{224, 209, 240}
