--- a/template2 copy.tex
+++ b/template2 copy.tex
@@ -11,13 +11,11 @@
 
 \begin{document}
 \begin{adjustwidth}{-3cm}{-3cm}
-Soit $(z,z') \in \mathbb{C}$. Alors :
-\begin{enumerate}[label=\textbf{\arabic*.}]
-\item $\left\lvert \text{Re}(z)\right\rvert \leq \left\lvert z\right\rvert$ et $\left\lvert \text{Im}(z)\right\rvert \leq \left\lvert z \right\rvert $
 
-\item $\left\lvert \left\lvert z \right\rvert - \left\lvert z' \right\rvert  \right\rvert \leq \left\lvert z-z'\right\rvert \leq\left\lvert z+z'\right\rvert \leq \left\lvert z\right\rvert +\left\lvert z'\right\rvert $  
-\item $(\left\lvert z+z'\right\rvert = \left\lvert z\right\rvert +\left\lvert z'\right\rvert) \Leftrightarrow (z = 0 \text{ ou } \exists \alpha \in \mathbb{R}_+, z' = \alpha z) $
-\end{enumerate}
+\begin{align*}
+    &T_s - T_f = \frac{1}{hS} \times \Phi \\
+    \implies &\boxed{ T_s - T_f = R_N \times \Phi}
+\end{align*}
 
 \end{adjustwidth}
 \end{document}
