--- a/template2.tex
+++ b/template2.tex
@@ -4,6 +4,8 @@
 \usepackage{amssymb,amsmath}
 \usepackage{enumitem}
 \usepackage{changepage}
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
 \pagestyle{empty}
 \setlength{\parindent}{0in}
 \newcommand{\ui}{\displaystyle}
@@ -11,6 +13,22 @@
 
 \begin{document}
 \begin{adjustwidth}{-3cm}{-3cm}
-
+    \begin{tikzpicture}
+        \begin{axis}[
+          xmax = 5,
+          xmin = -5,
+          ymax = 5,
+          ymin = -5,
+          ytick = {0},
+          xtick = {0},
+          samples=500,
+          xlabel={$x$},
+          ylabel={$\arccos(x)$},
+          axis lines=middle,
+          grid=major,
+          ]
+          \addplot[blue,thick,domain =-5:5] {acos(x)};
+        \end{axis}
+      \end{tikzpicture}
 \end{adjustwidth}
 \end{document}
