--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -6,3 +6,5 @@
 \newcommand{\ccode}[1]{\texttt{|#1|}}
 \newcommand{\ov}[1]{\overline{#1}}
 \newcommand{\abs}[1]{|#1|}
+\newcommand{\rev}[1]{\texttt{reverse(#1)}}
+\newcommand{\crev}[1]{\texttt{|reverse(#1)|}}
