--- a/stock/en-tete.tex
+++ b/stock/en-tete.tex
@@ -8,6 +8,7 @@
 \usepackage{graphicx}
 \usepackage[framemethod=tikz]{mdframed}
 \usepackage{tikz,pgfplots}
+\pgfplotsset{compat=1.18}
 
 % physique
 \definecolor{oranges}{RGB}{255, 242, 230}
