--- a/Informatique/TD-6.1.tex
+++ b/Informatique/TD-6.1.tex
@@ -57,4 +57,8 @@
     \end{itemize}
     Donc, par induction structurelle sur \code{l1}, $\forall \code{l1}, \rev{l1 @ l2} = \code{\rev{l2} @ \rev{l1}}$
 \end{question}
+
+\begin{question}{I.4) }{}
+    
+\end{question}
 \input{../stock/pied.tex}
