--- a/archives maths/C16/16-75/16-75.tex
+++ b/archives maths/C16/16-75/16-75.tex
@@ -2,7 +2,7 @@
 \input{../../stock/en-tete.tex}
 
 \begin{theoreme}{16.75}{ - relations de Viète}
-    Soit $ P = (a_n) \in \mb{K}_n[X]$ scindé, de racines $r_1, \dots, r_n$. Alors : $$\forall k \in \llbracket 1,n \rrbracket, \sum_{1 \leq i_1 < \dots < i_k \leq n}r_{i_1} \dots r_{i_k} = (-1)^k \frac{a_{n-k}}{a_n}$$
+    Soit $ P = (a_n) \in \mb{K}[X]$ scindé de degré $n$, de racines $r_1, \dots, r_n$. Alors : $$\forall k \in \llbracket 1,n \rrbracket, \sum_{1 \leq i_1 < \dots < i_k \leq n}r_{i_1} \dots r_{i_k} = (-1)^k \frac{a_{n-k}}{a_n}$$
     En particulier, $$ \Aboxed{\prod_{k=1}^{n}r_k = (-1)^n\frac{a_0}{a_n} \text{ et } \sum_{k=1}^{n}r_k = - \frac{a_{n-1}}{a_n}}$$
 \end{theoreme}
 
