--- a/Informatique/TD-6.1.tex
+++ b/Informatique/TD-6.1.tex
@@ -1,5 +1,5 @@
 \input{../stock/commands.tex}
-\input{../stock/en-tete.tex}
+\input{../stock/en-tete_v1.tex}
 
 \begin{question}{I.1) }{Définition inductive de la concaténation en Ocaml}
     Pour toutes listes \code{l} et \code{q}, et tout élément \code{e} :
