--- a/archives maths/C16/16-100/16-100.tex
+++ b/archives maths/C16/16-100/16-100.tex
@@ -1,5 +1,5 @@
 \input{../../stock/commands.tex}
-\input{../../stock/en-tete.tex}
+\input{../../stock/en-tete_v1.tex}
 
 \begin{theoreme}{16.100}{ - polynômes irréductibles de $\mb{R}[X]$}
     Les polynômes irréductibles de $\mb{R}[X]$ sont les polynômes de degré 1 et les polynômes de degré 2 à discriminant strictement négatif.
