--- a/archives maths/C16/16-102/16-102.tex
+++ b/archives maths/C16/16-102/16-102.tex
@@ -1,5 +1,5 @@
 \input{../../stock/commands.tex}
-\input{../../stock/en-tete.tex}
+\input{../../stock/en-tete_v1.tex}
 
 \begin{definition}{16.102}{ - $P$-évaluation}
     Soit $P \in \mc{I}_{\mb{K}[X]}$ et $Q \in \mb{K}[X]$ non nul. l'ensemble $\{r \in \mb{N}, P^n \mid Q\}$ est non vide (0 appartient à cet emseble), et majoré, donc admet un plus grand élément qu'on note $v_P(Q)$ et appelle \notion{$P$-évaluation} de $Q$. \\ Par convention, $v_P(0) = +\infty$
