--- a/archives maths/C16/16-105/16-105.tex
+++ b/archives maths/C16/16-105/16-105.tex
@@ -1,5 +1,5 @@
 \input{../../stock/commands.tex}
-\input{../../stock/en-tete.tex}
+\input{../../stock/en-tete_v1.tex}
 
 \begin{theoreme}{16.105}{ - propriétés de la $P$-évalutation}
     Soit $(Q,R) \in (\mb{K}[X])^2$, $P \in \mc{I}_{\mb{K}[X]}$. On a :
