--- a/archives maths/C16/16-66/16-66.tex
+++ b/archives maths/C16/16-66/16-66.tex
@@ -1,5 +1,5 @@
 \input{../../stock/commands.tex}
-\input{../../stock/en-tete.tex}
+\input{../../stock/en-tete_v1.tex}
 
 \begin{theoreme}{16.66}{ - polynôme d'interpolation de Lagrange}
     Soit $\mb{K}$ un corps, $n \in \mb{N}^*$, $x_0, \dots, x_n$ distincts dans $\mb{K}$ et $y_0,\dots,y_n$ dans $\mb{K}$. Il existe un unique $P \in \mb{K}_n[X]$ tel que pour tout $i \in \llbracket 0,n \rrbracket, \tilde{P}(x_i) = y_i$. Ce polynôme est alors : $$ P = \sum_{i=0}^{n}y_i L_i = \sum_{i=0}^{n}y_i \prod_{0\leq j \neq i \leq n} \frac{X-x_j}{x_i-x_j}$$
