--- a/archives maths/C19/19-26.tex
+++ b/archives maths/C19/19-26.tex
@@ -1,5 +1,5 @@
 \input{../../stock/commands.tex}
-\input{../../stock/en-tete.tex}
+\input{../../stock/en-tete_v1.tex}
     \begin{theoreme}{19.26}{ - inégalité de Hölder}
         Soit $n \in \mb{N}^*$, $(p,q) \in (\mb{R}_+^*)^2$ tel que $\displaystyle \frac{1}{p} + \frac{1}{q} = 1$. Soit $(a_1,\dots,a_n,b_1,\dots,b_n) \in (\mb{R}_+^*)^{2n}$. On a : $$\sum_{k=1}^{n}a_kb_k \leq \sqrt[p]{\sum_{k=1}^{n}a_k^p} \sqrt[q]{\sum_{k=1}^{n}b_k^q}$$ 
     \end{theoreme}
