--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -8,3 +8,6 @@
 \newcommand{\abs}[1]{|#1|}
 \newcommand{\rev}[1]{\texttt{reverse(#1)}}
 \newcommand{\crev}[1]{\texttt{|reverse(#1)|}}
+
+\newcommand{\N}{\mathbb{N}}
+\newcommand{\R}{\mathbb{R}}
