--- a/archives maths/C16/16-73_16-74/16-73_16-74.tex
+++ b/archives maths/C16/16-73_16-74/16-73_16-74.tex
@@ -1,5 +1,5 @@
 \input{../../stock/commands.tex}
-\input{../../stock/en-tete.tex}
+\input{../../stock/en-tete_v1.tex}
 
     \begin{proposition}{16.73}{ - polynômes scindés dans $\mb{R}[X]$}
         Soit $P$ un polynôme scindé non constant de $\mb{R}[X]$, alors $P'$ est scindé. Si de plus $P$ est à racines simples, alors $P'$ est scindé, et ses racines séparent celles de $P$.
