--- a/archives maths/C18/18-30.tex
+++ b/archives maths/C18/18-30.tex
@@ -1,5 +1,5 @@
 \input{../../stock/commands.tex}
-\input{../../stock/en-tete.tex}
+\input{../../stock/en-tete_v1.tex}
 
 \begin{theoreme}{18.30}{- CS sur $f'$ pour que $f$ soit lipschitzienne}
     Soit $f$ une fonction dérivable sur un intervalle $I$. Si $f'$ est bornée sur $I$, alors $f$ est lipschitzienne sur $I$. Plus précisément, si $k$ est un majorant de $|f'|$ sur $I$, alors $f$ est $k$-lipschitzienne.
