--- a/stock/en-tete_v3.tex
+++ b/stock/en-tete_v3.tex
@@ -8,6 +8,7 @@
 \usepackage{graphicx}
 \usepackage[framemethod=tikz]{mdframed}
 \usepackage{tikz,pgfplots}
+\usepackage[french]{babel}
 \pgfplotsset{compat=1.18}
 
 % physique
