--- a/Informatique/colles/17/colle.tex
+++ b/Informatique/colles/17/colle.tex
@@ -11,16 +11,16 @@ Soit $(E,\leq)$ un ensemble ordonné. Les propositions suivantes sont équivalen
 
 
 \begin{demonstration}
-    (1) $\implies$ (2) : $\quad$ Supposons que $\leq$ est un ordre bien fondé, et par l'absurde, que $(x_n)_{n \in \mathbb{N}}$ est une suite infinie strictement décroissante d'éléments de $E$. Alors l'ensemble non vide $\{x_n, n\in \mathbb{N}\} \subset E$ admet un élément minimal $x_k$; Ainsi, par décroissance stricte de $(x_n)$, $x_{k+1} < x_k$, Absurde, $x_k$ est l'élément minimal de $E$.
+    (1) $\implies$ (2) : $\quad$ Supposons que $\leq$ est un ordre bien fondé, et par l'absurde, que $(x_n)_{n \in \mathbb{N}}$ est une suite infinie strictement décroissante d'éléments de $E$. Alors l'ensemble non vide $\{x_n, n\in \mathbb{N}\} \subset E$ admet un élément minimal $x_k$; Ainsi, par décroissance stricte de $(x_n)$, $x_{k+1} < x_k$, ce qui contredit la minimalité de $x_k$.
 \end{demonstration}
 
 \begin{demonstration}
     (2) $\implies$ (3) : $\quad$ Soit $P$ un prédicat sur $E$. On suppose par l'absurde : \begin{align*}
         &\text{(2) et } \lnot \text{(3)} \\
-        \Leftrightarrow \quad& \text{(2) et }  \biggl(\forall x \in E, \Bigl(\forall y \in E, x>y \implies P(y)\Bigr) \implies P(x)\biggr) \text{ et } \biggl(\exists x \in E, \lnot P(x)\biggr) \\
-        \Leftrightarrow \quad& \text{(2) et }  \biggl(\forall x \in E,   \lnot P(x) \implies \Bigl(\exists y \in E, x>y \text{ et } \lnot P(y)\Bigr) \biggr) \text{ et } \biggl(\exists x \in E, \lnot P(x)\biggr)  \\
+        \text{donc} \quad& \text{(2) et }  \biggl(\forall x \in E, \Bigl(\forall y \in E, x>y \implies P(y)\Bigr) \implies P(x)\biggr) \text{ et } \biggl(\exists x \in E, \lnot P(x)\biggr) \\
+        \text{donc} \quad& \text{(2) et }  \biggl(\forall x \in E,   \lnot P(x) \implies \Bigl(\exists y \in E, x>y \text{ et } \lnot P(y)\Bigr) \biggr) \text{ et } \biggl(\exists x \in E, \lnot P(x)\biggr)  \\
     \end{align*}
-    Soit $x \in E$ tel que $\lnot P(x)$. On choisit $y \in E$ tel que $x>y$ et $\lnot P(y)$. De même, on peut encore choisir $z \in E$ tel que $y>z$ et $\lnot P(z)$. De par le principe de récurrence, on construit ainsi une suite strictement décroissante $(x_i) \in E^\N$, telle que pour tout $i \in \N, \lnot P(x_i)$. Or on a (2), Absurde.
+    Soit $x \in E$ tel que $\lnot P(x)$. On choisit $y \in E$ tel que $x>y$ et $\lnot P(y)$. De même, on peut encore choisir $z \in E$ tel que $y>z$ et $\lnot P(z)$. D'après le principe de récurrence, on construit ainsi une suite strictement décroissante $(x_i) \in E^\N$, telle que pour tout $i \in \N, \lnot P(x_i)$. Ce qui contredit la propriété (2).
 \end{demonstration}
 
 \begin{demonstration}
@@ -30,13 +30,13 @@ Soit $(E,\leq)$ un ensemble ordonné. Les propositions suivantes sont équivalen
         \Leftrightarrow  \quad &\Biggl(\Biggl[\biggl(\forall x \in E, \Bigl(\forall y \in E, x>y \implies P(y)\Bigr) \implies P(x)\biggr) \implies \biggl(\forall x \in E, P(x)\biggr) \Biggr] \implies \text{(1)} \Biggr)\\
         \Leftrightarrow \quad &\Biggl( \Biggl[\biggl(\exists x \in E, \lnot P(x)\biggr) \implies \biggl(\exists x \in E, \Bigl(\forall y \in E, x>y \implies P(y)\Bigr) \text{ et } \lnot P(x)\biggr)\Biggr] \implies \text{(1)}\Biggr)
     \end{align*}
-    Soit $A \subset E$, tel que $A \neq \varnothing$. On note $P$ le prédicat de $E$ tel que $P(x) : \, \og x \notin A \fg{}$. Nécessairement, il existe $x \in E$ tel que \begin{align*}
+    Soit $A \subset E$, tel que $A \neq \varnothing$. On note $P$ le prédicat de $E$ tel que $A \neq \varnothing$. Pour tout $x \in E$ on note $P(x) : \,  "x \notin A"$. Nécessairement, il existe $x \in E$ tel que \begin{align*}
         &x \in A \\
         \text{donc} \quad &\lnot P(x)
     \end{align*}
     On choisit alors $m \in A$ tel que : \begin{align*}
         &\lnot P(m) \text{ et } \bigl( \forall y \in E, y<m \implies P(y) \bigr)\\
-        \Leftrightarrow \quad &m \in A \text{ et } \bigl( \forall y \in E, y<m \implies y \notin A \bigr)
+        \text{alors} \quad &m \in A \text{ et } \bigl( \forall y \in E, y<m \implies y \notin A \bigr)
     \end{align*}
     $m$ est alors l'élément minimal de $A$. donc $\leq$ est un ordre bien fondé.
 \end{demonstration}
@@ -54,11 +54,12 @@ Soit $(E,\leq)$ un ensemble ordonné. Les propositions suivantes sont équivalen
         Y_0 =  B \\
         \forall n \in \mathbb{N}, Y_{n+1} = Y_n \cup \mathcal{K}(Y_n)
     \end{cases}$ \\ \\
-    alors $X = \bigcup_{n \in \mathbb{N}}Y_n$. \\ Pour tout $x \in X$
+    alors $X = \bigcup_{n \in \mathbb{N}}Y_n$. 
     \begin{definition}{temporaire}{hauteur d'un élément d'ensemble inductif défini récursivement}
-        on définit alors la \notion{hauteur} de $x$ par $h(x) = \min \{n \in \mathbb{N}, x \in Y_n\}$.
-    \end{definition}\\
-    On suppose que : \begin{enumeratebf}
+        Pour tout $x \in X$ on définit alors la \notion{hauteur} de $x$ par $h(x) = \min \{n \in \mathbb{N}, x \in Y_n\}$.
+    \end{definition}
+    On suppose que : 
+    \begin{enumeratebf}
         \item $\forall b \in B, \mathcal{P}(b)$
         \item $\forall f : E^p \rightarrow E \in \mathcal{K}, \, \forall x_1,\ldots, x_p \in X, \quad \Bigl(\forall i \in \llbracket 1,p \rrbracket, \mathcal{P}(x_i)\Bigr) \implies \Bigl(\mathcal{P}\bigl(f(x_1,\ldots,x_p)\bigr)\Bigr)$
     \end{enumeratebf}
