--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -9,6 +9,17 @@
 \newcommand{\rev}[1]{\texttt{reverse(#1)}}
 \newcommand{\crev}[1]{\texttt{|reverse(#1)|}}
 
+\newcommand{\ie}{\textit{i.e.} }
+
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
+
+\newcommand{\A}{\mathcal{A}}
+\newcommand{\bigO}{\mathcal{O}}
+
+\newcommand{\intint}[1]{\llbracket #1 \rrbracket}
+
+
+
+
