--- a/archives maths/C21/cours.tex
+++ b/archives maths/C21/cours.tex
@@ -1,9 +1,11 @@
+\input{../../stock/en-tete_v4.tex}
+\begin{document}
+\begin{adjustwidth}{-3cm}{-3cm}
 \input{../../stock/commands.tex}
-\input{../../stock/en-tete_v1.tex}
-&x
-\begin{proposition}{21.2}{ - respect du neutre}
-    
-\end{proposition}
 
+\begin{definition}{21.41}{polynôme minimal}
+    L'ensemble $I$ des polynômes annulateur d'un endomorphisme $u$ forme un idéal de $\mb{K}[X]$. \\
+    Comme $\mb{K}[X]$ est principal, il existe un unique polynôme unitaire $D \in \mb{K}[X]$ tel que : $$ I = D \mb{K}[X] $$ Ce polynôme $D$ est appelé \notion{polynôme minimal} de $u$. Il n'existe que si $u$ admet au moins un polynôme annulateur non nul.
+\end{definition} 
 
 \input{../../stock/pied.tex}
