--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -14,11 +14,14 @@
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
+\newcommand{\K}{\mathbb{K}}
 
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\bigO}{\mathcal{O}}
 
-\newcommand{\intint}[1]{\llbracket #1 \rrbracket}
+\newcommand{\intint}[2]{\llbracket #1,#2 \rrbracket}
+\newcommand{\seg}[2]{[#1\, ; \, #2]}
+
 
 
 
