--- a/archives maths/C25/cours.tex
+++ b/archives maths/C25/cours.tex
@@ -16,7 +16,7 @@ $$P = \sum_{k=0}^{n}\frac{f^{(k)}(x_0)}{k!}(X-x_0)^k$$
 \end{definition}
 
 \begin{proposition}{25.18}{fonction développable en série de Taylor}
-    Soit $f:I \to \R$ de classe $\mc{C}^{\infty}$ sur $I$ (ou sur $\{x_0\}$ ?). Alors : 
+    Soit $f:I \to \R$ de classe $\mc{C}^{\infty}$ sur $I$, $x_0 \in I$. Alors : 
     $$\Bigr(\forall x \in I, \, \lim_{n \to +\infty} R_{n,x_0}(x) = 0\Bigl) \quad \implies \quad \Bigr(\forall x \in I, \, f(x) = \sum_{k=0}^{+\infty}\frac{f^{(k)}(x_0)}{k!}(X-x_0)^k\Bigl)$$
     Dans ce cas, on dit que $f$ est \notion{développable en série de Taylor en $x_0$}.
 \end{proposition}
