--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -21,7 +21,8 @@
 
 \newcommand{\intint}[2]{\llbracket #1,#2 \rrbracket}
 \newcommand{\seg}[2]{[#1\, ; \, #2]}
-
+\newcommand{\mat}[1]{\text{Mat}_{#1}}
+\newcommand{\matrice}[1]{\mathcal{M}_{#1}}
 
 
 
