--- a/archives maths/C28/cours.tex
+++ b/archives maths/C28/cours.tex
@@ -14,4 +14,14 @@
 Soit $E$ et $F$ deux espaces vectoriels de dimensions finies non nulles $p$ et $n$ et $u \in \mc{L}(E,F)$. Soit $\mc{B} = (e_i)_{i\in \intint{1}{p}}$ une base de $E$ et $\mc{B'} = (f_i)_{i\in \intint{1}{n}}$ une base de $F$.\\
 On appelle \notion{matrice de $u$ dans les bases $\mc{B}$ et $\mc{B}'$} et on note $\mat{e,f}(u)$ la matrice de la famille $u(\mc{B})$ dans la base $\mc{B}'$. \\\\\\\\\\\\\\\\\\
 \end{definition}
+
+\begin{theoreme}{18.21 (1)}{lien entre applications linéaires et matrices}
+    Soit $E$ de base $e$ et $F$ de base $f$ deux $\K$-ev de dimensions finies non nulles $p$ et $n$ respectivement.\\
+    $\mc{L}(E,F)$ et $\matrice{n,p}(\K)$ sont isomorphes. En effet, $u : \mc{L}(E,F) \to \matrice{n,p}(\K)\quad; \quad u\mapsto \mat{e,f}(u)$ convient.
+\end{theoreme}
+
+\begin{theoreme}{18.22 (2)}{lien entre applications linéaires et matrices}
+    Soit $E$ de base $e$, $F$ de base $f$, $G$ de base $g$ trois $\K$-ev de dimensions finies. Soit $\mat{e,g}(v \circ u) = \mat{f,g}(v) \times $ \\
+    $\mc{L}(E,F)$ et $\matrice{n,p}(\K)$ sont isomorphes. En effet, $u : \mc{L}(E,F) \to \matrice{n,p}(\K)\quad; \quad u\mapsto \mat{e,f}(u)$ convient.
+\end{theoreme}
 \input{../../stock/pied.tex}
